--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 # `REACT_APP` prefix is required to expose to client-side
 REACT_APP_VERCEL_ANALYTICS_ID=$VERCEL_ANALYTICS_ID
+REACT_APP_BACKEND_URL=https://employee-manager-silk.vercel.app/
